--- a/myQRcode/Storyboards/Base.lproj/Settings.storyboard
+++ b/myQRcode/Storyboards/Base.lproj/Settings.storyboard
@@ -267,7 +267,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="tipCell" rowHeight="100" id="qwG-sT-JYh" customClass="TipTableViewCell" customModule="myQRcode" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TipTableViewCell" rowHeight="100" id="qwG-sT-JYh" customClass="TipTableViewCell" customModule="myQRcode" customModuleProvider="target">
                                 <rect key="frame" x="16" y="119" width="343" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qwG-sT-JYh" id="GN4-Rh-hTO">
