Added changelog within the app #11

--- a/App/Storyboards/Base.lproj/Generate.storyboard
+++ b/App/Storyboards/Base.lproj/Generate.storyboard
@@ -118,7 +118,7 @@
                             <tableViewSection id="BAZ-GJ-NJ7" userLabel="Templates section">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="OnT-E3-r5L">
-                                        <rect key="frame" x="20" y="178.00000000000003" width="390" height="47.333332061767578"/>
+                                        <rect key="frame" x="20" y="178" width="390" height="47.333332061767578"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OnT-E3-r5L" id="LMW-Bg-IQ8">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="47.333332061767578"/>
@@ -517,10 +517,10 @@
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="secondaryLabelColor">
-            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
