Removed NSPrivacyTracking as my tracking is not used for ads

--- a/App/Storyboards/Base.lproj/Generate.storyboard
+++ b/App/Storyboards/Base.lproj/Generate.storyboard
@@ -301,7 +301,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="templateCell" textLabel="XNl-he-7ff" style="IBUITableViewCellStyleDefault" id="r1N-bb-kVT">
-                                <rect key="frame" x="20" y="38" width="390" height="43.666667938232422"/>
+                                <rect key="frame" x="20" y="55.333332061767578" width="390" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r1N-bb-kVT" id="bgU-Eu-NA7">
                                     <rect key="frame" x="0.0" y="0.0" width="359.66666666666669" height="43.666667938232422"/>
@@ -488,8 +488,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6YY-1Z-bav" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="7UO-Bt-Wbw">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="108"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7UO-Bt-Wbw">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
